@startuml

class MapController
class MapInputBoundary
class MapInteractor
class MapOutputBoundary
class MapPresenter
class MapInputData
class MapOutputData
class BusIcon
class RouteShape
class MapViewModel
class RouteShapeDataAccessInterface
class RouteShapeDataAccessObject
class MapView
class BusDatabase
class BusDataAccessObject

MapInputBoundary <|.. MapInteractor
MapOutputBoundary <|.. MapPresenter

MapView --> MapViewModel
MapController --> MapInputData
MapController --> MapInputBoundary
MapInteractor --> MapOutputBoundary
MapInteractor --> MapInputData
MapInteractor --> MapOutputData
MapInteractor --> BusIcon
MapInteractor --> RouteShape
MapInteractor --> RouteShapeDataAccessInterface
RouteShapeDataAccessInterface <|.. RouteShapeDataAccessObject
MapView --> MapController
MapPresenter --> MapViewModel
BusDatabase <|.. BusDataAccessObject
MapInteractor --> BusDatabase

@enduml